// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Associated Buildings/Parcels view Associated buildings list renders correctly 1`] = `
<div
  class="list-group"
>
  <p
    class="label header"
    style="margin: 5px 0px;"
  >
    Associated Buildings
  </p>
  <div
    class="list-group-item"
  >
    Click a building name to view its details
  </div>
  <div
    class="list-group-item"
  >
    This parcel has no associated buildings
  </div>
</div>
`;

exports[`Associated Buildings/Parcels view Associated parcels list renders correctly 1`] = `
<div
  class="list-group"
>
  <p
    class="label header"
    style="margin: 5px 0px;"
  >
    Associated Land
  </p>
  <div
    class="list-group-item"
  >
    Click a parcel's PID/PIN to view its details
  </div>
  <div
    class="list-group-item"
  >
    <a
      class="styled-link"
      href="/mapview?disabled=true&loadDraft=false&parcelId=1&sidebar=true"
    >
      000-000-000
    </a>
  </div>
</div>
`;
